Complete project modernization with comprehensive cross-platform documentation
- Restructured project from dual Maven/Gradle to Gradle-only build system
- Updated README with comprehensive platform-specific installation guides
- Added detailed prerequisites, installation steps, and troubleshooting for Linux, macOS, and Windows
- Included Docker alternative for consistent cross-platform deployment
- Updated Gradle wrapper to version 8.5 for Java 21 compatibility
- Enhanced Quick Start section with Gradle wrapper instructions
- Replaced all legacy manual compilation references with modern Gradle commands
- Added comprehensive troubleshooting section for common build and runtime issues

Co-authored-by: openhands <openhands@all-hands.dev>